# BERT-E2E-ABSA

./: .gitignore  __init__.py  pyproject.toml  train.sh  work.py  work.sh
bert_e2e_absa/: __init__.py  absa_layer.py  bert.py  glue_utils.py  main.py  train.py  work.py
data/rest14/: cached_train_bert-base-uncased_128_rest14
src/: work.py
