[tool.poetry]
name = "BERT_E2E_ABSA"
version = "0.1.0"
description = "Exploiting BERT End-to-End Aspect-Based Sentiment Analysis"
authors = [
    "Li, Xin <lixin@se.cuhk.edu.hk>",
    "Bing, Lidong <l.bing@alibaba-inc.com>",
    "Zhang, Wenxuan <wxzhang@se.cuhk.edu.hk>",
    "Lam, Wai <wlam@se.cuhk.edu.hk>",
]

[tool.poetry.dependencies]
python = "~3.8"
numpy = ">=1.24.4"
transformers = ">=4.33.3"
tensorboardX = "==1.8"
tqdm = ">=4.66.1"
openpyxl = "==3.1.2"
scipy = "==1.10.1"
pandas = "==1.1.4"
torch = ">=2.0.0, !=2.0.1"
protobuf = "==3.20"

[tool.poe.tasks]
train = "sh ./train.sh"
work = "sh ./work.sh"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
