[tool.poetry]
name = "bert-e2e-absa"
version = "0.1.0"
description = "Exploiting BERT End-to-End Aspect-Based Sentiment Analysis"
authors = [
    "Li, Xin <lixin@se.cuhk.edu.hk>",
    "Bing, Lidong <l.bing@alibaba-inc.com>",
    "Zhang, Wenxuan <wxzhang@se.cuhk.edu.hk>",
    "Lam, Wai <wlam@se.cuhk.edu.hk>",
]
packages = [{ include = "bert-e2e-absa" }]

[tool.poetry.dependencies]
python = "~3.8"
numpy = ">=1.23"
transformers = "^4.26.1"
tensorboardX = "==1.8"
tqdm = ">=4.66.1"
openpyxl = "==3.1.2"
scipy = "==1.10.1"
pandas = "^1.4.4"
torch = ">=2.0.0, !=2.0.1"
protobuf = "==3.20"

[tool.poe.tasks]
train = "sh ./train.sh"
work = "sh ./work.sh"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
